--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,24 @@ body {
   background-color: var(--color-dark-blue);
 }
 
+main {
+  padding: 2em 4em;
+}
+
+main a {
+  text-decoration: none;
+  color: inherit;
+}
+
+main > section > div {
+  padding-inline: 4em;
+}
+
+main > section.catalog:not(:last-child):after {
+  content: "";
+  display: block;
+  height: 4px;
+  background-color: var(--color-black);
+  border-radius: 4px;
+  margin-block: 2em;
+}
