--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   color: var(--color-black);
+  background-color: var(--color-gray);
 }
 
 .header {
