--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ main > section.catalog:not(:last-child):after {
   content: "";
   display: block;
   height: 4px;
+  width: 100%;
   background-color: var(--color-black);
   border-radius: 4px;
   margin-block: 2em;
