--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,26 @@ main > section.catalog:not(:last-child):after {
   border-radius: 4px;
   margin-block: 2em;
 }
+
+.menu__content-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2em;
+}
+
+.menu-card {
+  background-color: var(--color-white);
+  border-radius: 2em;
+  padding: 1.25em;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25em;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  transition-duration: 0.2s;
+}
+
+.menu-card:hover {
+  transform: scale(1.05);
+}
