--- a/styles.css
+++ b/styles.css
@@ -237,3 +237,46 @@ main > section {
 .card__description {
   font-size: 0.875em;
 }
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2em;
+  background-color: var(--color-black);
+  color: var(--color-white);
+  padding: 2em 4em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+}
+
+.footer h2 {
+  font-size: 1.5em;
+  font-weight: 700;
+}
+
+.resources {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5em;
+}
+
+.footer svg {
+  width: 48px;
+  height: 48px;
+  transition-duration: 0.2s;
+}
+
+.footer svg:hover {
+  opacity: 0.7;
+}
+
+
+.resources__list {
+  display: flex;
+  column-gap: 0.5em;
+}
+
+.warning {
+  grid-column: -1 / 1;
+  text-align: center;
+}
