--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ body {
   font-weight: 400;
   color: var(--color-black);
   background-color: var(--color-gray);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h1 {
@@ -247,6 +250,7 @@ main > section {
 }
 
 .footer {
+  margin-top: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2em;
