--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  row-gap: 48px;
 }
 
 h1 {
@@ -109,13 +110,17 @@ main h2 {
   background-color: var(--color-dark-blue);
 }
 
-main {
-  padding: 3em 8em;
-}
-
 main a {
   text-decoration: none;
   color: inherit;
+}
+
+main {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 64px;
+  margin: 0 auto;
 }
 
 main > section {
@@ -123,16 +128,13 @@ main > section {
   flex-direction: column;
   row-gap: 1em;
   align-items: center;
+  width: 100%;
 }
 
 main > section > div,
 main > section > nav,
 main > section > p {
-  width: 90%;
-}
-
-main > section {
-  margin-block: 4em;
+  width: 100%;
 }
 
 .about__content {
