--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,12 @@ body {
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 3.5rem;
   font-weight: 700;
 }
 
 main h2 {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   font-weight: 700;
   text-align: center;
 }
@@ -66,11 +66,12 @@ main h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  column-gap: 1rem;
   background-color: var(--color-light-blue);
   color: var(--color-white);
-  padding: 2em 4em;
-  border-bottom-left-radius: 2em;
-  border-bottom-right-radius: 2em;
+  padding: 2rem 4vw;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
 }
 
 .header a {
@@ -85,29 +86,112 @@ main h2 {
 }
 
 .header__logo-title {
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 700;
 }
 
-.header__menu-list {
+.header__menu-list,
+.burger__list {
   display: flex;
-  column-gap: 1em;
-  font-size: 1.25em;
+  column-gap: 1rem;
+  font-size: 1.25rem;
 }
 
-.header__menu-link {
-  padding: 0.5em;
-  border-radius: 0.5em;
+.header__menu-link,
+.burger__link {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
   transition-duration: 0.2s;
 }
 
-.header__menu-link--active {
+.header__menu-link--active,
+.burger__link--active {
   background-color: var(--color-white);
   color: var(--color-black) !important;
 }
 
-.header__menu-link:hover:not(.header__menu-link--active) {
+.header__menu-link:hover:not(.header__menu-link--active),
+.burger__link:hover:not(.burger__link--active) {
   background-color: var(--color-dark-blue);
+}
+
+.burger {
+  display: none;
+}
+
+.burger__checkbox {
+  position: absolute;
+  visibility: hidden;
+}
+
+.burger__label {
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 26px;
+}
+
+.burger__label::before,
+.burger__label::after {
+  content: '';
+  left: 0;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 10px;
+  background: var(--color-white);
+}
+
+.burger__label::before {
+  top: 0;
+  box-shadow: 0 11px 0 var(--color-white);
+  transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
+}
+
+.burger__label::after {
+  bottom: 0;
+  transition: bottom .3s .15s, transform .3s;
+}
+
+.burger__checkbox:checked + .burger__label::before {
+  top: 11px;
+  transform: rotate(45deg);
+  box-shadow: 0 6px 0 rgba(0,0,0,0);
+  transition: box-shadow .15s, top .3s, transform .3s .15s;
+}
+
+.burger__checkbox:checked + .burger__label::after {
+  bottom: 11px;
+  transform: rotate(-45deg);
+  transition: bottom .3s, transform .3s .15s;
+}
+
+.burger__list {
+  top: 0;
+  left: 0;
+  position: absolute;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  background: var(--color-light-blue);
+  transform: translateY(-100%);
+  height: 10rem;
+  transition: 0.2s;
+  width: 100%;
+  padding: 2rem 4rem 2rem 4vw;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  overflow-y: auto;
+}
+
+.burger__checkbox:checked ~ .burger__list {
+  transform: translateY(0);
 }
 
 main a {
@@ -296,4 +380,61 @@ main > section > p {
 .warning {
   grid-column: -1 / 1;
   text-align: center;
+}
+
+/* @media (max-width: 1440px) {
+  .menu__content-list {
+    grid-template-columns: 1fr 1fr;
+  }
+} */
+
+@media (max-width: 1200px) {
+  .header__menu-list {
+    gap: 0.5em;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header__menu-list {
+    display: none;
+  }
+
+  .burger {
+    display: block;
+  }
+  
+  .burger__list {
+    column-gap: 0.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+    body {
+      font-size: 0.875rem;
+    }
+
+    .header {
+      padding-block: 1.5rem;
+    }
+
+    .header__logo-title {
+      font-size: 2.5rem;
+    }
+
+    .burger__list {
+      height: 129px;
+      line-height: 1.1;
+      padding: 1rem 5rem 1rem 4vw;
+    }
+
+  /* .menu__content-list {
+    grid-template-columns: 1fr;
+  } */
+}
+
+@media (max-width: 425px) {
+  .burger__list {
+    padding: 0.5rem 3.5rem 0.5rem 2vw;
+    line-height: 1;
+  }
 }
