--- a/styles.css
+++ b/styles.css
@@ -290,8 +290,8 @@ main > section > p {
 }
 
 .card svg {
-  width: 40px;
-  height: 40px;
+  width: 2.5em;
+  height: 2.5em;
   stroke: var(--color-violet);
 }
 
@@ -342,7 +342,7 @@ main > section > p {
   gap: 2em;
   background-color: var(--color-black);
   color: var(--color-white);
-  padding: 2em 4em;
+  padding: 2rem 4vw;
   border-top-left-radius: 2em;
   border-top-right-radius: 2em;
 }
@@ -352,20 +352,21 @@ main > section > p {
   font-weight: 700;
 }
 
-.resources {
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.5em;
-}
-
 .footer svg {
-  width: 48px;
-  height: 48px;
+  width: 3em;
+  height: 3em;
   transition-duration: 0.2s;
 }
 
 .footer svg:hover {
   opacity: 0.7;
+}
+
+.resources,
+.contact {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5em;
 }
 
 .resources__list {
@@ -380,6 +381,7 @@ main > section > p {
 .warning {
   grid-column: -1 / 1;
   text-align: center;
+  margin-top: 2em;
 }
 
 @media (max-width: 1440px) {
@@ -429,6 +431,17 @@ main > section > p {
 
   .menu__content-list {
     grid-template-columns: 1fr;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .resources,
+  .contact {
+    align-items: center;
+    text-align: center;
   }
 }
 
