--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  row-gap: 48px;
+  row-gap: 3em;
 }
 
 h1 {
@@ -66,12 +66,12 @@ main h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 1rem;
+  column-gap: 1em;
   background-color: var(--color-light-blue);
   color: var(--color-white);
-  padding: 2rem 4vw;
-  border-bottom-left-radius: 2rem;
-  border-bottom-right-radius: 2rem;
+  padding: 2em 4vw;
+  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 2em;
 }
 
 .header a {
@@ -93,14 +93,14 @@ main h2 {
 .header__menu-list,
 .burger__list {
   display: flex;
-  column-gap: 1rem;
+  column-gap: 1em;
   font-size: 1.25rem;
 }
 
 .header__menu-link,
 .burger__link {
-  padding: 0.5rem;
-  border-radius: 0.5rem;
+  padding: 0.5em;
+  border-radius: 0.5em;
   transition-duration: 0.2s;
 }
 
@@ -172,25 +172,29 @@ main h2 {
   transition: bottom .3s, transform .3s .15s;
 }
 
-.burger__list {
+.burger__list-wrapper {
   top: 0;
   left: 0;
   position: absolute;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: center;
   background: var(--color-light-blue);
   transform: translateY(-100%);
   height: 10rem;
+  width: 80%;
   transition: 0.2s;
-  width: 100%;
-  padding: 2rem 4rem 2rem 4vw;
-  border-bottom-left-radius: 2rem;
-  border-bottom-right-radius: 2rem;
-  overflow-y: auto;
+  padding-inline: 4vw;
+  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 2em;
 }
 
-.burger__checkbox:checked ~ .burger__list {
+.burger__list {
+  height: 95%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+}
+
+.burger__checkbox:checked ~ .burger__list-wrapper {
   transform: translateY(0);
 }
 
@@ -203,7 +207,7 @@ main {
   width: 80%;
   display: flex;
   flex-direction: column;
-  row-gap: 64px;
+  row-gap: 4em;
   margin: 0 auto;
 }
 
@@ -327,12 +331,12 @@ main > section > p {
 }
 
 .card__title {
-  font-size: 1.25em;
+  font-size: 1.25rem;
   font-weight: 700;
 }
 
 .card__description {
-  font-size: 0.875em;
+  font-size: 0.875rem;
 }
 
 .footer {
@@ -342,13 +346,13 @@ main > section > p {
   gap: 2em;
   background-color: var(--color-black);
   color: var(--color-white);
-  padding: 2rem 4vw;
+  padding: 2em 4vw;
   border-top-left-radius: 2em;
   border-top-right-radius: 2em;
 }
 
 .footer h2 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 700;
 }
 
@@ -375,7 +379,7 @@ main > section > p {
 }
 
 .resources__item:first-child {
-  margin-right: 4px;
+  margin-right: 0.25em;
 }
 
 .warning {
@@ -406,7 +410,7 @@ main > section > p {
   }
   
   .burger__list {
-    column-gap: 0.5rem;
+    column-gap: 0.5em;
   }
 }
 
@@ -416,17 +420,16 @@ main > section > p {
   }
 
   .header {
-    padding-block: 1.5rem;
+    padding-block: 1.5em;
   }
 
   .header__logo-title {
     font-size: 2.5rem;
   }
 
-  .burger__list {
-    height: 129px;
-    line-height: 1.1;
-    padding: 1rem 5rem 1rem 4vw;
+  .burger__list-wrapper {
+    height: 123px;
+    gap: 0.25em;
   }
 
   .menu__content-list {
@@ -442,12 +445,5 @@ main > section > p {
   .contact {
     align-items: center;
     text-align: center;
-  }
-}
-
-@media (max-width: 425px) {
-  .burger__list {
-    padding: 0.5rem 3.5rem 0.5rem 2vw;
-    line-height: 1;
   }
 }
