--- a/styles.css
+++ b/styles.css
@@ -87,45 +87,37 @@ h1 {
   font-weight: 700;
 }
 
-.header__menu-list,
-.burger__list {
+.header__menu-list {
   display: flex;
   column-gap: 1em;
   font-size: 1.25rem;
 }
 
-.header__menu-link,
-.burger__link {
+.header__menu-link {
   padding: 0.5em;
   border-radius: 0.5em;
   transition-duration: 0.2s;
 }
 
-.header__menu-link--active,
-.burger__link--active {
+.header__menu-link--active {
   background-color: var(--color-white);
   color: var(--color-black) !important;
 }
 
-.header__menu-link:hover:not(.header__menu-link--active),
-.burger__link:hover:not(.burger__link--active) {
+.header__menu-link:hover:not(.header__menu-link--active) {
   background-color: var(--color-dark-blue);
 }
 
-.burger {
-  display: none;
-}
-
-.burger__checkbox {
+.header__burger-checkbox {
   position: absolute;
   visibility: hidden;
 }
 
-.burger__label {
+.header__burger-button {
+  display: none;
   position: relative;
   z-index: 1;
   cursor: pointer;
-  display: block;
   position: relative;
   border: none;
   background: transparent;
@@ -133,8 +125,8 @@ h1 {
   height: 26px;
 }
 
-.burger__label::before,
-.burger__label::after {
+.header__burger-button::before,
+.header__burger-button::after {
   content: '';
   left: 0;
   position: absolute;
@@ -145,53 +137,31 @@ h1 {
   background: var(--color-white);
 }
 
-.burger__label::before {
+.header__burger-button::before {
   top: 0;
   box-shadow: 0 11px 0 var(--color-white);
   transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
 }
 
-.burger__label::after {
+.header__burger-button::after {
   bottom: 0;
   transition: bottom .3s .15s, transform .3s;
 }
 
-.burger__checkbox:checked + .burger__label::before {
+.header__burger-checkbox:checked + .header__burger-button::before {
   top: 11px;
   transform: rotate(45deg);
   box-shadow: 0 6px 0 rgba(0,0,0,0);
   transition: box-shadow .15s, top .3s, transform .3s .15s;
 }
 
-.burger__checkbox:checked + .burger__label::after {
+.header__burger-checkbox:checked + .header__burger-button::after {
   bottom: 11px;
   transform: rotate(-45deg);
   transition: bottom .3s, transform .3s .15s;
 }
 
-.burger__list-wrapper {
-  top: 0;
-  left: 0;
-  position: absolute;
-  background: var(--color-light-blue);
-  transform: translateY(-100%);
-  height: 10rem;
-  width: 80%;
-  transition: 0.2s;
-  padding-inline: 4vw;
-  border-bottom-left-radius: 2em;
-  border-bottom-right-radius: 2em;
-}
-
-.burger__list {
-  height: 95%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  overflow-x: auto;
-}
-
-.burger__checkbox:checked ~ .burger__list-wrapper {
+.header__burger-checkbox:checked ~ .header__menu-list {
   transform: translateY(0);
 }
 
@@ -500,15 +470,24 @@ table caption {
   }
 
   .header__menu-list {
-    display: none;
-  }
+    position: absolute;
+    top: 0;
+    left: 0;
+    flex-wrap: wrap;
+    row-gap: 0.2em;
+    background: var(--color-light-blue);
+    transform: translateY(-100%);
+    width: 100%;
+    transition: 0.2s;
+    padding: 1em 16vw 1em 4vw;
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+    min-height: 137px;
+    align-items: center;
+}
 
-  .burger {
+  .header__burger-button {
     display: block;
-  }
-  
-  .burger__list {
-    column-gap: 0.5em;
   }
 
   .menu__content-list,
@@ -526,9 +505,8 @@ table caption {
     padding-block: 1.5em;
   }
 
-  .burger__list-wrapper {
-    height: 123px;
-    gap: 0.25em;
+  .header__menu-list {
+    min-height: 123px;
   }
 
   .menu__content-list,
