--- a/normalize.css
+++ b/normalize.css
@@ -114,7 +114,7 @@ html {
     Убираем скачок интерфейса по горизонтали
     при появлении / исчезновении скроллбара
    */
-  scrollbar-gutter: stable;
+  /* scrollbar-gutter: stable; [отключено из-за появления пустого места на главной странице с desktop устройства] */
 }
 
 /**
