--- a/styles.css
+++ b/styles.css
@@ -527,6 +527,10 @@ table caption {
     transform: scale(1.05);
   }
 
+  tr:hover {
+    background-color: var(--color-white);
+  }
+
   .footer svg:hover {
     opacity: 0.7;
   }
