--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ main > section > p {
   border-radius: 1em;
   flex-shrink: 0;  /* Запрет на сжатие обёртки */
   width: 80px;     /*                          */
+  user-select: none;
 }
 
 .card--telegram > .card__icon-wrapper {
@@ -286,6 +287,7 @@ main > section > p {
 
 .card--menu > .card__icon {
   width: clamp(80px, 5.2vw, 100px);
+  user-select: none;
 }
 
 .card__type {
