--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ h1 {
   border-bottom-left-radius: 2em;
   border-bottom-right-radius: 2em;
   font-size: clamp(14px, 0.833vw, 16px);
+  user-select: none;
 }
 
 .header__logo {
@@ -271,6 +272,7 @@ main > section > p {
   border-radius: 1em;
   flex-shrink: 0;  /* Запрет на сжатие обёртки */
   width: 80px;     /*                          */
+  user-select: none;
 }
 
 .card--telegram > .card__icon-wrapper {
@@ -285,6 +287,7 @@ main > section > p {
 
 .card--menu > .card__icon {
   width: clamp(80px, 5.2vw, 100px);
+  user-select: none;
 }
 
 .card__type {
@@ -381,6 +384,7 @@ table caption {
   border-top-left-radius: 2em;
   border-top-right-radius: 2em;
   font-size: clamp(14px, 0.833vw, 16px);
+  user-select: none;
 }
 
 .footer h2 {
