--- a/styles.css
+++ b/styles.css
@@ -324,7 +324,9 @@ main > section > p {
 .manual-about {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   column-gap: 32px;
+  row-gap: 8px;
 }
 
 .manual-about__element {
