--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   row-gap: 3em;
+  position: relative;
 }
 
 h1 {
@@ -76,6 +77,9 @@ h1 {
   border-bottom-right-radius: 2em;
   font-size: clamp(14px, 0.833vw, 16px);
   user-select: none;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
 .header__logo {
