--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
   --color-dark-blue: #18A0E4;
   --color-violet-background: #baa9f6;
   --color-violet: #7755ee;
+  --header-height-default: 137px;
+  --header-height-small: 123px;
 }
 
 ::selection {
@@ -46,6 +48,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   row-gap: 3em;
+  position: relative;
 }
 
 h1 {
@@ -65,6 +68,10 @@ h1 {
 }
 
 .header {
+  min-height: var(--header-height-default);
+}
+
+.header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -76,6 +83,9 @@ h1 {
   border-bottom-right-radius: 2em;
   font-size: clamp(14px, 0.833vw, 16px);
   user-select: none;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
 .header__logo {
@@ -478,7 +488,7 @@ table caption {
     padding: 1em 16vw 1em 4vw;
     border-bottom-left-radius: 2em;
     border-bottom-right-radius: 2em;
-    min-height: 137px;
+    min-height: var(--header-height-default);
     align-items: center;
 }
 
@@ -497,12 +507,13 @@ table caption {
     row-gap: 40px;
   }
 
-  .header {
-    padding-block: 1.5em;
+  .header,
+  .header__menu-list {
+    min-height: var(--header-height-small);
   }
 
-  .header__menu-list {
-    min-height: 123px;
+  .header__wrapper {
+    padding-block: 1.5em;
   }
 
   .catalog-group__list {
